[package]
name = "luajit-imgui-bindings"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.58", features = ["raw_value"] }
