[package]
name = "luajit-imgui-bindings"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
glob = "0.3.0"
indoc = "1.0.2"
itertools = "0.9.0"
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.58", features = ["raw_value"] }
